--- a/index.html
+++ b/index.html
@@ -74,10 +74,8 @@ img {vertical-align: middle;}
 }
 </style>
 </head>
-<body>
+<body style="background-color:black">
 
-<h2>Automatic Slideshow</h2>
-<p>Change image every 2 seconds:</p>
 
 <div class="slideshow-container">
 
