--- a/index.html
+++ b/index.html
@@ -128,10 +128,8 @@ function showSlides() {
 }
 </script>
 
-<iframe style='position: fixed;
-                top: 10px;' type='audio/m4a'
-        src="https://schainerringler.github.io/sound.m4a"
-        frameborder="0" allowfullscreen>
+<iframe src="https://schainerringler.github.io/sound.m4a"
+        allow="autoplay" id="rick" style="display: none"></iframe>
 
 </body>
 </html>
